# discord-cal

./: README.md  pyproject.toml
discal/: __main__.py
