[tool.poetry]
name = "discord-cal"
version = "0.1.0"
description = ""
authors = ["Parker Wahle <parkeredwardwahle2017@gmail.com>"]
license = "GPLv3"
readme = "README.md"
homepage = "https://github.com/regulad/discord-cal"
repository = "https://github.com/regulad/discord-cal"
packages = [
    { include = "discal" }
]

[tool.poetry.dependencies]
python = "^3.10"
ics = "^0.7"
pypresence = "^4.2.1"
pytz = "^2022.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
discord-cal = 'discal:__main__.main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
